fixing image on small screen

--- a/index.css
+++ b/index.css
@@ -354,11 +354,11 @@ nav .fa {
 
     /* making text center in screen for smaller screens */
     .name {
-        padding-right: 0;
+        padding-right: 30%;
     }
 
     .intro {
-        padding-right: 0;
+        padding-right: 30%;
     }
 }
 
